@@ -12,6 +12,8 @@ wajig (2.0.49) unstable; urgency=low
     the default option, but suggestion offered in #424668 is more sane.
   * CHANGELOG: Add -l|--latest option, replacing NEWS (which is now removed).
   * CHANGELOG: Add -x|--pager option to allow can scrolling.
+  * DIST-UPGRADE: Add -b|--backup=BKDIR option to allow backing up of packages
+    before dist-upgrade.
   * BUILD: now uses sudo instead of fakeroot to avoid permission-related
     build failures for some packages (EG, fakeroot & cdbs). (Closes: #464003).
   * "wajig changelog libgtk2.0-0" now works.
